--- a/login.css
+++ b/login.css
@@ -19,6 +19,9 @@
 }
 
 .login-box {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
   background-color: #fff;
   position: absolute;
   top: 50%;
@@ -141,6 +144,19 @@
   display: block;
 }
 
-#adm_link{
+#adm-link{
+  text-align: center;
   margin-top: 30px;
+  padding: 5px;
+  font-size: 13px;
 }
+
+#adm-link:hover{
+  background: white;
+  color: orange;
+  box-shadow: none;
+}
+
+
+
+
