--- a/momo.css
+++ b/momo.css
@@ -7,11 +7,9 @@
 */
 
 * {
-  margin: 0px;
-  padding: 0px;
-  box-sizing: 0px;
-  text-decoration: none;
-  font-family: "Raleway", sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
 }
 
 body {
@@ -33,262 +31,67 @@ body:hover::-webkit-scrollbar-thumb {
   background-color: rgba(0, 0, 0, 0.1);
 }
 
-nav {
-  display: flex;
-  background-color: transparent;
-  transition: all 0.5s ease-in-out;
-  justify-content: space-around;
-  padding: 25px 0;
-  width: 100%;
-  position: fixed;
-  align-items: center;
-  z-index: 2;
-}
-
-nav img {
-  width: 50%;
-}
-
-nav h1 {
-  font-size: 40px;
-}
-
-nav ul {
-  display: flex;
-  list-style: none;
-  width: 50%;
-  justify-content: space-between;
-}
-
-header nav ul li a {
-  color: white;
+body#home {
   position: relative;
-  text-decoration: none;
-  font-weight: bold;
-  font-size: 18px;
-  letter-spacing: 0.5px;
-  padding: 0 10px;
+  margin-left: 200px;
+  width: calc(100% - 200px);
 }
 
-nav.navbar-scrolled {
-  background-color: #ffffff;
-  height: 30px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
-
-nav.navbar-scrolled a {
-  color: black;
-}
-
-nav.navbar-scrolled #nav-login {
-  background-color: orange;
-}
-
-nav.navbar-scrolled #nav-login:hover {
-  filter: brightness(90%);
-  transform: scale(1.1);
-}
-
-#nav-login {
-  background-color: orange;
-  font-weight: bold;
-  border-color: transparent;
-  text-align: center;
-  position: relative;
-  display: inline-block;
-  padding: 10px 20px;
-  color: black;
-  font-size: 16px;
-  text-decoration: none;
-  text-transform: uppercase;
-  overflow: hidden;
-  transition: 0.5s;
-  letter-spacing: 4px;
-  border-radius: 10px;
-}
-
-#nav-login:hover {
-  filter: brightness(90%);
-  transform: scale(1.1);
-}
-
-#nav-logout {
-  cursor: pointer;
-  background-color: yellow;
-  font-weight: bold;
-  border-color: transparent;
-  text-align: center;
-  position: relative;
-  display: inline-block;
-  padding: 10px 20px;
-  color: black;
-  font-size: 14px;
-  text-decoration: none;
-  text-transform: uppercase;
-  overflow: hidden;
-  transition: 0.5s;
-  letter-spacing: 4px;
-  border-radius: 10px;
-}
-
-#nav-logout:hover {
-  filter: brightness(90%);
-  transform: scale(1.1);
-}
-
-header nav ul li a:after {
-  content: "";
-  font-weight: bold;
-  position: absolute;
+.sidebar {
   background-color: #ff4800;
-  height: 3px;
-  width: 0;
-  left: 0;
-  bottom: -10px;
-  transition: 0.3s;
-}
-
-header nav ul li a:hover:after {
-  width: 100%;
-}
-
-.landing {
-  background-image: url("assets/landing.jpg");
-  background-size: cover;
-  background-position: center center;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.landing::before {
-  content: "";
-  background-image: url("assets/landing.jpg");
-  background-size: cover;
-  background-position: center center;
-  height: 100%;
-  width: 100%;
-  filter: blur(5px);
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
+  bottom: 0;
+  width: 200px;
+  overflow: hidden;
+  padding-top: 100px;
+  box-sizing: border-box;
+  box-shadow: -5px 0px 9px rgba(0, 0, 0, 100);
 }
 
-.landing h1 {
-  color: white;
-  cursor: pointer;
-  z-index: 1;
-  font-size: 90px;
+.sidebar ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.sidebar a {
   transition: 0.2s ease-in;
-}
-
-.landing h1:hover {
-  font-size: 100px;
-}
-
-.landing h3 {
-  transition: 0.2s ease-in;
+  display: block;
   color: white;
-  z-index: 1;
-  margin-top: 5px;
-  font-size: 40px;
+  padding: 10px;
+  text-decoration: none;
+  transition: all o.2s ease-in-out;
+  box-sizing: border-box;
+  font-family: "Lato", sans-serif;
+  font-weight: bold;
+  font-size: 18px;
 }
 
-.landing h3:hover {
-  font-size: 50px;
-}
-
-.about {
-  margin-top: 200px;
-  margin-bottom: 200px;
-}
-
-.about h1 {
-  margin-bottom: 3%;
-  color: #ff4800;
-  font-size: 40px;
-  text-align: center;
-  font-family: "Montserrat", sans-serif;
-}
-
-.about .container .isikonten {
-  display: flex;
-  flex-direction: column;
-  margin-left: 50px;
-  font-size: 142%;
-}
-
-.about .container {
-  display: flex;
-}
-
-.about .gambar img {
-  background-size: cover;
-  border-radius: 5%;
-  margin-right: 50px;
-  margin-left: 50px;
-  box-shadow: 15px 15px 30px #bebebe, -15px -15px 30px #ffffff;
-  transition: 0.2s ease-in;
-}
-
-.about .gambar img:hover {
-  transform: scale(1.05);
-}
-
-.about strong {
-  font-size: 30px;
-  margin-bottom: 30px;
-}
-
-.order h1 {
-  text-align: center;
-  margin-bottom: 8%;
+.sidebar li a {
+  display: block;
   color: white;
-  font-size: 40px;
-  font-family: "Montserrat", sans-serif;
+  padding: 8px 16px;
+  text-decoration: none;
 }
 
-.order {
-  background-color: darkred;
-  padding: 9% 11%;
+.sidebar a:hover {
+  background-color: orange;
   font-weight: bolder;
-}
-
-.order-container {
-  display: flex;
-  justify-content: space-between;
-}
-
-.order-container div {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-}
-
-.order img {
-  width: 150px;
-  margin: 6% 8% 0% 8%;
-  transition: 0.2s ease-in;
-}
-
-.order img:hover {
-  transform: scale(1.2);
-}
-
-.order p {
-  font-size: 30px;
-  margin-top: 20%;
-  margin-left: 10%;
   color: white;
-  margin-bottom: 5%;
+  transform: translatex(10px);
+}
+
+.item {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .menu {
-  margin-top: 200px;
-  margin-bottom: 10px;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 .btn-ubah {
@@ -302,6 +105,7 @@ header nav ul li a:hover:after {
 .btn-ubah a {
   color: white;
   font-weight: bold;
+  text-decoration: none;
 }
 
 .btn-ubah:hover {
@@ -325,6 +129,7 @@ header nav ul li a:hover:after {
 .btn-hapus a {
   color: white;
   font-weight: bold;
+  text-decoration: none;
 }
 
 .tambah-hapus {
@@ -336,7 +141,7 @@ header nav ul li a:hover:after {
 }
 
 .tambah-hapus button {
-  box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.25); 
+  box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.25);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -354,11 +159,12 @@ header nav ul li a:hover:after {
 }
 
 .tambah-hapus a {
+  text-decoration: none;
   font-size: 150px;
   color: white;
 }
 
-.tambah-hapus h2{
+.tambah-hapus h2 {
   margin-bottom: 30px;
   font-size: 30px;
 }
@@ -422,279 +228,35 @@ header nav ul li a:hover:after {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-.gallery {
-  overflow: hidden;
+.table-user {
+  margin: 50px;
 }
 
-.gallery h1 {
-  margin-top: 8%;
-  padding-top: 7%;
+.table-user h1 {
   color: #ff4800;
-  font-size: 40px;
-  text-align: center;
-  margin-bottom: 7%;
-  font-family: "Montserrat", sans-serif;
-  text-transform: uppercase;
 }
 
-.gallery .isiGallery {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.gallery .isiGallery .kolom {
-  display: flex;
-  flex-direction: column;
-  width: 32.5%;
-}
-
-.gallery .isiGallery .kolom img {
+.table-user table {
   width: 100%;
-  padding-bottom: 15px;
-  border-radius: 5px;
-  transition: all 0.3s ease;
+  margin-top: 30px;
 }
 
-.gallery img:hover {
-  transform: scale(1.05);
-  filter: brightness(120%);
+.table-user th,
+.table-user td {
+  padding: 10px;
 }
 
-.map {
-  margin-top: 200px;
-  background-color: darkred;
-  padding: 100px;
+.table-user th {
+  background-color: orange;
+  color: #333;
 }
 
-.map h1 {
-  text-align: center;
-  color: white;
-  margin-bottom: 50px;
+.table-user tr:hover {
+  background-color: #eaeaea;
 }
 
-.map p {
-  text-align: center;
-  margin: 20px 0;
+.table-user td a {
+  color: red;
+  text-decoration: none;
   font-weight: bold;
-  color: white;
-  font-size: 30px;
-}
-
-.maps-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  gap: 50px;
-}
-
-iframe {
-  flex-basis: 50%;
-}
-
-.foot {
-  background-color: darkred;
-  color: white;
-  padding-left: 0%;
-  padding-top: 7%;
-  padding-bottom: 7%;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: 1fr;
-}
-
-.foot p {
-  margin-bottom: 6%;
-}
-
-.foot .part1 {
-  padding: 20%;
-  text-align: left;
-}
-
-.foot .part2 {
-  padding: 20%;
-  text-align: left;
-}
-
-.foot .part3 {
-  padding: 20%;
-  text-align: center;
-}
-
-.foot .part3 img {
-  justify-content: space-between;
-}
-
-.foot .part4 {
-  padding: 20%;
-  text-align: left;
-}
-
-.foot img {
-  width: 35px;
-}
-
-.burger span {
-  color: black;
-  display: none;
-}
-
-@media screen and (max-width: 1280px) {
-  .burger span {
-    display: block;
-  }
-
-  nav {
-    justify-content: space-around;
-    padding: 40px;
-  }
-
-  nav ul {
-    display: block;
-    position: absolute;
-    background-color: #ff4800;
-    width: 200px;
-    text-align: center;
-    top: 0;
-    right: -400px;
-    height: 100vh;
-  }
-
-  nav ul li {
-    margin: 20px 0px;
-  }
-
-  .home .kontenKiri {
-    background-image: url("assets/beranda4.png");
-    margin-top: 12%;
-    width: 1024px;
-    height: 650px;
-    object-fit: cover;
-  }
-
-  .home .kontenKiri h1 {
-    font-weight: bold;
-    color: white;
-    font-size: 75px;
-    text-align: center;
-    margin-top: 10%;
-  }
-
-  .home .kontenKiri p {
-    font-family: "Montserrat", sans-serif;
-    font-size: 30px;
-    font-weight: bolder;
-    color: lightgray;
-    text-align: center;
-  }
-
-  .about .container img {
-    margin-left: 10%;
-    grid-column: 2 / 3;
-    grid-row: 1 / 2;
-  }
-
-  .about .container p {
-    padding-top: 2%;
-    margin-left: 5%;
-    display: grid;
-    grid-template-columns: 50% 50%;
-    font-size: 100%;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .home .kontenKiri {
-    background-image: url("assets/beranda4.png");
-    margin-top: 17%;
-    width: 760px;
-    height: 650px;
-    object-fit: cover;
-  }
-
-  .home .kontenKiri h1 {
-    font-weight: bold;
-    color: white;
-    font-size: 65px;
-    text-align: center;
-    margin-top: 15%;
-  }
-
-  .home .kontenKiri p {
-    font-family: "Montserrat", sans-serif;
-    font-size: 20px;
-    font-weight: bolder;
-    color: lightgray;
-    text-align: center;
-  }
-
-  .foot {
-    background-color: darkred;
-    color: white;
-    padding-left: 0%;
-    padding-top: 7%;
-    padding-bottom: 7%;
-    margin-top: 16%;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 2fr;
-  }
-
-  .foot .part3 {
-    text-align: left;
-  }
-}
-
-@media screen and (max-width: 564px) {
-  .home .kontenKiri {
-    background-image: url("assets/beranda4.png");
-    margin-top: 26%;
-    width: 564px;
-    height: 650px;
-    object-fit: cover;
-  }
-
-  .home .kontenKiri h1 {
-    font-weight: bold;
-    color: white;
-    font-size: 40px;
-    text-align: center;
-    margin-top: 27%;
-  }
-
-  .home .kontenKiri p {
-    font-family: "Montserrat", sans-serif;
-    font-size: 14px;
-    font-weight: bolder;
-    color: lightgray;
-    text-align: center;
-  }
-
-  .foot {
-    background-color: darkred;
-    color: white;
-    padding-left: 0%;
-    padding-top: 7%;
-    padding-bottom: 7%;
-    margin-top: 16%;
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: 4fr;
-  }
-  .foot .part1 {
-    text-align: center;
-  }
-
-  .foot .part2 {
-    text-align: center;
-  }
-
-  .foot .part3 {
-    text-align: center;
-  }
-
-  .foot .part4 {
-    text-align: center;
-  }
 }
